集成环信客服sdk

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,5 @@
     <string name="back">返回</string>
     <string name="click">选中</string>
     <string name="delete">删除</string>
+    <string name="title_activity_login2">Sign in</string>
 </resources>
